--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "handlebars": "^4.7.7",
+    "handlebars-layouts": "^3.1.4",
     "hbs": "^4.2.0",
     "mongoose": "^7.1.0",
     "morgan": "^1.10.0",
